# keyboard_project

./: .gitignore  Makefile  README.md  pyproject.toml
keyboard_project/: communication_module.py  data_parser.py  gui.py  keyboard.py  keyboard_creator.py  port_module.py
keyboard_project/scripts/: keyboard_control.py
tests/: test_keyboard_project.py
